--- a/src/Pages/NotesPage/NotesPage.css
+++ b/src/Pages/NotesPage/NotesPage.css
@@ -2,8 +2,8 @@
    display: flex;
    min-height: 100vh;
    max-height: auto;
-   padding: 6rem 8rem;
-   gap: 0 5rem;
+   padding: 3rem 6rem;
+   gap: 0 3rem;
    background-color: var(--gray-bg-color);
 }
 
@@ -31,7 +31,7 @@
     display: flex;
     text-align: start;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 0 10rem;
     line-height: 2;
 }
 
@@ -147,8 +147,9 @@
      padding: 1rem 2rem 3rem 2rem;
      position: fixed;
      min-width: 25rem;
-     top: 25%;
+     top: 21%;
      left: 35%;
+     box-shadow: 6px 5px 30px 10px rgba(0,0,0,0.1);
  }
 
  .title-input{
