style : fixed the button color

--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -80,7 +80,8 @@
 }
 
 .login-btn:hover{
-    background-color: var(--black-color);
+    color: var(--white-color);
+    background-color: var(--primary-color);
 }
 
 .signUp-with-google-btn{
